feat: add first screen form

--- a/ClientDocGFS/ClientDocGFS.csproj
+++ b/ClientDocGFS/ClientDocGFS.csproj
@@ -25,4 +25,9 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0" />
         <PackageReference Include="Svg.Skia" Version="1.0.0" />
     </ItemGroup>
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\ClientDocGFS.Shared\ClientDocGFS.Shared.csproj" />
+    </ItemGroup>
 </Project>
