--- a/ClientDocGFS.Data/ClientDocGFS.Data.csproj
+++ b/ClientDocGFS.Data/ClientDocGFS.Data.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ClientDocGFS.Domain\ClientDocGFS.Domain.csproj" />
       <ProjectReference Include="..\ClientDocGFS.Shared\ClientDocGFS.Shared.csproj" />
     </ItemGroup>
 
