--- a/ClientDocGFS/ClientDocGFS.csproj
+++ b/ClientDocGFS/ClientDocGFS.csproj
@@ -28,6 +28,7 @@
 
 
     <ItemGroup>
+      <ProjectReference Include="..\ClientDocGFS.Domain\ClientDocGFS.Domain.csproj" />
       <ProjectReference Include="..\ClientDocGFS.Shared\ClientDocGFS.Shared.csproj" />
     </ItemGroup>
 </Project>
