--- a/ClientDocGFS.Service/ClientDocGFS.Service.csproj
+++ b/ClientDocGFS.Service/ClientDocGFS.Service.csproj
@@ -6,4 +6,17 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ClientDocGFS.Data\ClientDocGFS.Data.csproj" />
+      <ProjectReference Include="..\ClientDocGFS.Shared\ClientDocGFS.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9" />
+    </ItemGroup>
+
 </Project>
