--- a/ClientDocGFS/ClientDocGFS.csproj
+++ b/ClientDocGFS/ClientDocGFS.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.0.0" />
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.0" />
         <PackageReference Include="Avalonia.Desktop" Version="11.0.0" />
         <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
@@ -29,6 +30,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ClientDocGFS.Domain\ClientDocGFS.Domain.csproj" />
+      <ProjectReference Include="..\ClientDocGFS.Service\ClientDocGFS.Service.csproj" />
       <ProjectReference Include="..\ClientDocGFS.Shared\ClientDocGFS.Shared.csproj" />
     </ItemGroup>
 </Project>
